blueprint update docker setup

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,6 +1,5 @@
 FROM python:3.11.0-alpine
 WORKDIR /project
-COPY app $WORKDIR
-RUN pwd
+COPY . $WORKDIR
 RUN pip install --upgrade pip && \
     pip install -r requirements.txt
