--- a/.github/workflows/docker-compose-test.yml
+++ b/.github/workflows/docker-compose-test.yml
@@ -19,4 +19,5 @@ jobs:
         compose-file: "./docker-compose.yml"
     - name: Test docker-compose application is working
       run: |
-          curl -v "http://localhost:5000/status?code=200"
+        sleep(20)
+        curl -v "http://localhost:5000/status?code=200"
