--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.11.0-alpine
 WORKDIR /project
-ADD . /project
+COPY . $WORKDIR
 RUN pip install --upgrade pip && \
     pip install -r requirements.txt
